Styling and interface fixes
Fixed an issue with the left CMP icon not aligning to the left on Safari. Fixed an issue with multi-select on the Training page where the import/export feature wouldn't work for all multi-selects. Selected team now clears when entering a new Tournament Mode game to fix an issue that sometimes prevented a full team from being selected.

--- a/src/css/train.scss
+++ b/src/css/train.scss
@@ -185,6 +185,10 @@ a.random{
 
 			&.left{
 				left:2.5%;
+				
+				.cmp{
+					left:0;
+				}
 			}
 
 			&.right{
